fix: do not wrap log message in viewer

--- a/src/ts/components/project/log-viewer/log-viewer.module.scss
+++ b/src/ts/components/project/log-viewer/log-viewer.module.scss
@@ -41,5 +41,5 @@
 }
 
 .itemMessage {
-  flex: 1 1 auto;
+  flex: 0 0 auto;
 }
